--- a/DR25-KOI.ipynb
+++ b/DR25-KOI.ipynb
@@ -1129,7 +1129,9 @@
    "outputs": [],
    "source": [
     "from astroquery.gaia import Gaia\n",
-    "Gaia.login(user='tmorton', password=\"handel4uuaCib!\")"
+    "user = 'blah'\n",
+    "password = 'blahblah'\n",
+    "Gaia.login(user=user, password=password)"
    ]
   },
   {
