--- a/dr2-kepler-explore.ipynb
+++ b/dr2-kepler-explore.ipynb
@@ -1212,24 +1212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created TAP+ (v1.0.1) - Connection:\n",
-      "\tHost: gea.esac.esa.int\n",
-      "\tUse HTTPS: False\n",
-      "\tPort: 80\n",
-      "\tSSL Port: 443\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from astroquery.gaia import Gaia\n",
-    "Gaia.login(user='tmorton', password=\"handel4uuaCib!\")"
+    "user = 'blah'\n",
+    "password = 'blahblah'\n",
+    "Gaia.login(user=user, password=password) # user right user/password"
    ]
   },
   {
@@ -2602,7 +2592,7 @@
    "outputs": [],
    "source": [
     "from astroquery.gaia import Gaia\n",
-    "Gaia.login(user='tmorton', password=\"handel4uuaCib!\")"
+    "Gaia.login(user=user, password=password)"
    ]
   },
   {
@@ -2725,39 +2715,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'astroquery'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-898e481d91fc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mastroquery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgaia\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGaia\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mGaia\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtmorton\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"handel4uuaCib!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'astroquery'"
-     ]
-    }
-   ],
-   "source": [
-    "from astroquery.gaia import Gaia\n",
-    "Gaia.login(user=tmorton, password=\"handel4uuaCib!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -2782,7 +2739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
